# 4Borwser

./: .eslintrc.js  .gitignore  .prettierrc.js  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  FEATURES.md  LICENSE  PROJECT-OVERVIEW.md  QUICKSTART.md  README.md  SHORTCUTS.md  STATUS.md  VERSION.md  build.bat  package.json  tsconfig.json  vite.config.ts  webpack.preload.js
.github/workflows/: ci-cd.yml
config/: chrome-config.json  preferences.json
src/: main.cpp
src/core/: CMakeLists.txt  browser_instance.cpp  browser_instance.h
src/engine/: CMakeLists.txt  render_engine.cpp  render_engine.h
src/engine/rust/: Cargo.toml
src/engine/rust/src/: css.rs  dom.rs  layout.rs  lib.rs  renderer.rs
src/preload/: preload.js
src/renderer/: CMakeLists.txt  renderer.cpp  renderer.h
src/ui/: CMakeLists.txt  browser-bridge.js  keybinds.js  network-manager.js  settings-manager.js  storage-manager.js  window_manager.cpp  window_manager.h
ui/: BrowserShell.css  BrowserShell.tsx  index.css  index.html  main.js
